--- a/app/src/main/res/layout/fragment_electronics.xml
+++ b/app/src/main/res/layout/fragment_electronics.xml
@@ -3,5 +3,5 @@
     android:id="@+id/fragment_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mx.iteso.app.Activity_main$PlaceholderFragment"
+    tools:context=".Activity_main"
     android:scrollbarStyle="outsideOverlay"/>
