--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,5 +3,5 @@
     android:id="@+id/fragment_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity_main"
+    tools:context=".ActivityMain"
     android:scrollbarStyle="outsideOverlay"/>
