--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="padding_info_activity_product">10dp</dimen>
     <dimen name="image_height_activity_product">180dp</dimen>
+    <dimen name="padding_login_main_wrapper">10dp</dimen>
 </resources>
