--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="padding_info_activity_product">10dp</dimen>
     <dimen name="image_height_activity_product">180dp</dimen>
     <dimen name="padding_login_main_wrapper">10dp</dimen>
+    <dimen name="text_splash_screen_size">20sp</dimen>
 </resources>
